- Migration to log4j2 - Optimize dependencies in samples