@@ -19,8 +19,34 @@
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         <maven.javadoc.skip>true</maven.javadoc.skip>
 
+        <!-- project dependencies -->
+        <data.collector.api.version>2.0.5-SNAPSHOT</data.collector.api.version>
+        <data.collector.server.base.version>2.0.2-SNAPSHOT</data.collector.server.base.version>
+        <data.collector.testutils.version>2.0.2-SNAPSHOT</data.collector.testutils.version>
+        <data.collector.content.stream.disarding.version>2.0.1-SNAPSHOT</data.collector.content.stream.disarding.version>
+        <data.collector.content.stream.rawdata.version>2.0.2-SNAPSHOT</data.collector.content.stream.rawdata.version>
+        <data.collector.core.version>2.0.2-SNAPSHOT</data.collector.core.version>
+        <data.collector.docker.version>2.0.0-SNAPSHOT</data.collector.docker.version>
+
+        <!-- direct modules dependencies -->
+        <service.provider.api.version>2.0.1</service.provider.api.version>
+        <dynamaic.configuration.version>2.0.0</dynamaic.configuration.version>
+        <encryption.util.version>2.0.1</encryption.util.version>
+
+        <!-- secrets client dependencies -->
+        <secrets.client.api.version>2.0.3</secrets.client.api.version>
+        <secrets.client.dynamic.configuration.version>2.0.1</secrets.client.dynamic.configuration.version>
+        <secrets.client.google.configuration.version>2.0.1</secrets.client.google.configuration.version>
+        <secrets.client.safe.configuration.version>2.0.1</secrets.client.safe.configuration.version>
+
+        <!-- rawdata client -->
+        <rawdata.client.api.version>2.0.0</rawdata.client.api.version>
+        <rawdata.client.provider.gcs.version>2.0.0</rawdata.client.provider.gcs.version>
+        <rawdata.client.provider.psql.version>2.0.0</rawdata.client.provider.psql.version>
+
+        <!-- other dependencies -->
         <slf4j.version>2.0.16</slf4j.version>
-        <logback.version>1.5.8</logback.version>
+        <log4j2.version>2.24.1</log4j2.version>
     </properties>
 
     <licenses>
@@ -45,6 +71,173 @@
         <tag>HEAD</tag>
     </scm>
 
+    <dependencyManagement>
+        <dependencies>
+            <!-- data collector -->
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-api</artifactId>
+                <version>${data.collector.api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-server-base</artifactId>
+                <version>${data.collector.server.base.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-testutils</artifactId>
+                <version>${data.collector.testutils.version}</version>
+                <scope>test</scope>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-connector-content-stream-discarding</artifactId>
+                <version>${data.collector.content.stream.disarding.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
+                <version>${data.collector.content.stream.rawdata.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-core</artifactId>
+                <version>${data.collector.core.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.dc</groupId>
+                <artifactId>data-collector-docker</artifactId>
+                <version>${data.collector.docker.version}</version>
+            </dependency>
+
+            <!-- secrets client -->
+
+            <dependency>
+                <groupId>io.descoped.secrets</groupId>
+                <artifactId>secrets-client-api</artifactId>
+                <version>${secrets.client.api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.secrets</groupId>
+                <artifactId>secrets-provider-dynamic-configuration</artifactId>
+                <version>${secrets.client.dynamic.configuration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.secrets</groupId>
+                <artifactId>secrets-provider-google-secret-manager</artifactId>
+                <version>${secrets.client.google.configuration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.secrets</groupId>
+                <artifactId>secrets-provider-safe-configuration</artifactId>
+                <version>${secrets.client.safe.configuration.version}</version>
+            </dependency>
+
+            <!-- rawdata client -->
+
+            <dependency>
+                <groupId>io.descoped.rawdata</groupId>
+                <artifactId>rawdata-client-api</artifactId>
+                <version>${rawdata.client.api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.rawdata</groupId>
+                <artifactId>rawdata-client-provider-gcs</artifactId>
+                <version>${rawdata.client.provider.gcs.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.rawdata</groupId>
+                <artifactId>rawdata-client-provider-postgres</artifactId>
+                <version>${rawdata.client.provider.psql.version}</version>
+            </dependency>
+
+            <!-- descoped support -->
+
+            <dependency>
+                <groupId>io.descoped.spi</groupId>
+                <artifactId>service-provider-api</artifactId>
+                <version>${service.provider.api.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.config</groupId>
+                <artifactId>dynamic-configuration</artifactId>
+                <version>${dynamaic.configuration.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>io.descoped.encryption</groupId>
+                <artifactId>encryption-util</artifactId>
+                <version>${encryption.util.version}</version>
+            </dependency>
+
+            <!-- logging -->
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jul-to-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>jcl-over-slf4j</artifactId>
+                <version>${slf4j.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-core</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-api</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+
+            <dependency>
+                <groupId>org.apache.logging.log4j</groupId>
+                <artifactId>log4j-slf4j2-impl</artifactId>
+                <version>${log4j2.version}</version>
+            </dependency>
+
+            <!-- async handling logging -->
+            <dependency>
+                <groupId>com.lmax</groupId>
+                <artifactId>disruptor</artifactId>
+                <version>4.0.0</version>
+            </dependency>
+
+            <!-- ansi color logging -->
+            <dependency>
+                <groupId>org.fusesource.jansi</groupId>
+                <artifactId>jansi</artifactId>
+                <version>2.4.1</version>
+            </dependency>
+        </dependencies>
+    </dependencyManagement>
+
     <modules>
         <module>moveit-test-worker</module>
         <module>altinn3-test-worker</module>
@@ -54,6 +247,146 @@
     </modules>
 
     <profiles>
+        <profile>
+            <id>default</id>
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+            <dependencies>
+                <!-- data collector -->
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-server-base</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-testutils</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-connector-content-stream-discarding</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-connector-content-stream-rawdata</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-core</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.dc</groupId>
+                    <artifactId>data-collector-docker</artifactId>
+                </dependency>
+
+                <!-- secrets client -->
+
+                <dependency>
+                    <groupId>io.descoped.secrets</groupId>
+                    <artifactId>secrets-client-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.secrets</groupId>
+                    <artifactId>secrets-provider-dynamic-configuration</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.secrets</groupId>
+                    <artifactId>secrets-provider-safe-configuration</artifactId>
+                </dependency>
+
+                <!-- rawdata client -->
+
+                <dependency>
+                    <groupId>io.descoped.rawdata</groupId>
+                    <artifactId>rawdata-client-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.rawdata</groupId>
+                    <artifactId>rawdata-client-provider-gcs</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.rawdata</groupId>
+                    <artifactId>rawdata-client-provider-postgres</artifactId>
+                </dependency>
+
+                <!-- descoped support -->
+
+                <dependency>
+                    <groupId>io.descoped.spi</groupId>
+                    <artifactId>service-provider-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.config</groupId>
+                    <artifactId>dynamic-configuration</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>io.descoped.encryption</groupId>
+                    <artifactId>encryption-util</artifactId>
+                </dependency>
+
+                <!-- logging -->
+
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>slf4j-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jul-to-slf4j</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.slf4j</groupId>
+                    <artifactId>jcl-over-slf4j</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-core</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-api</artifactId>
+                </dependency>
+
+                <dependency>
+                    <groupId>org.apache.logging.log4j</groupId>
+                    <artifactId>log4j-slf4j2-impl</artifactId>
+                </dependency>
+
+                <!-- async handling logging -->
+                <dependency>
+                    <groupId>com.lmax</groupId>
+                    <artifactId>disruptor</artifactId>
+                </dependency>
+
+                <!-- ansi color logging -->
+                <dependency>
+                    <groupId>org.fusesource.jansi</groupId>
+                    <artifactId>jansi</artifactId>
+                </dependency>
+            </dependencies>
+        </profile>
+
         <profile>
             <id>coverage</id>
             <build>
@@ -77,6 +410,17 @@
                                 </goals>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <configuration>
+                            <!--suppress UnresolvedMavenProperty -->
+                            <argLine>
+                                ${argLine}
+                                -Xmx1500m
+                            </argLine>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -116,68 +460,71 @@
     </profiles>
 
     <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <version>3.13.0</version>
-                <configuration>
-                    <release>${java.version}</release>
-                    <encoding>${project.build.sourceEncoding}</encoding>
-                    <meminitial>64m</meminitial>
-                    <maxmem>512m</maxmem>
-                </configuration>
-            </plugin>
+        <pluginManagement>
+            <plugins>
+                <plugin>
+                    <artifactId>maven-compiler-plugin</artifactId>
+                    <version>3.13.0</version>
+                    <configuration>
+                        <release>${java.version}</release>
+                        <encoding>${project.build.sourceEncoding}</encoding>
+                        <meminitial>64m</meminitial>
+                        <maxmem>512m</maxmem>
+                    </configuration>
+                </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-resources-plugin</artifactId>
-                <version>3.3.1</version>
-                <configuration>
-                    <encoding>UTF-8</encoding>
-                </configuration>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-resources-plugin</artifactId>
+                    <version>3.3.1</version>
+                    <configuration>
+                        <encoding>UTF-8</encoding>
+                    </configuration>
+                </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-jar-plugin</artifactId>
-                <version>3.4.2</version>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-jar-plugin</artifactId>
+                    <version>3.4.2</version>
+                </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <version>3.5.0</version>
-                <configuration>
-                       <argLine>
-                        -Xmx1500m
-                    </argLine>
-                </configuration>
-            </plugin>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-surefire-plugin</artifactId>
+                    <version>3.5.0</version>
+                    <configuration>
+                        <argLine>
+                            -XX:+EnableDynamicAgentLoading
+                            -Xmx1500m
+                        </argLine>
+                    </configuration>
+                </plugin>
 
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-enforcer-plugin</artifactId>
-                <version>3.5.0</version>
-                <executions>
-                    <execution>
-                        <id>enforce-maven</id>
-                        <goals>
-                            <goal>enforce</goal>
-                        </goals>
-                        <configuration>
-                            <rules>
-                                <requireJavaVersion>
-                                    <version>${java.version}</version>
-                                </requireJavaVersion>
-                                <requireMavenVersion>
-                                    <version>[3.6.3,4)</version>
-                                </requireMavenVersion>
-                            </rules>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
+                <plugin>
+                    <groupId>org.apache.maven.plugins</groupId>
+                    <artifactId>maven-enforcer-plugin</artifactId>
+                    <version>3.5.0</version>
+                    <executions>
+                        <execution>
+                            <id>enforce-maven</id>
+                            <goals>
+                                <goal>enforce</goal>
+                            </goals>
+                            <configuration>
+                                <rules>
+                                    <requireJavaVersion>
+                                        <version>${java.version}</version>
+                                    </requireJavaVersion>
+                                    <requireMavenVersion>
+                                        <version>[3.6.3,4)</version>
+                                    </requireMavenVersion>
+                                </rules>
+                            </configuration>
+                        </execution>
+                    </executions>
+                </plugin>
+            </plugins>
+        </pluginManagement>
     </build>
 </project>
 
